Fix: updated image alt text

--- a/blog/2023-11-21-empowering-small-businesses/index.mdx
+++ b/blog/2023-11-21-empowering-small-businesses/index.mdx
@@ -5,7 +5,7 @@ authors: [gaurav]
 tags: [technology, digital-transformation, e-commerce, artificial-intelligence]
 ---
 
-![Wisenetic logo](./e-com.png)
+![e-commerce image](./e-com.png)
 
 ---
 
@@ -24,3 +24,5 @@ tags: [technology, digital-transformation, e-commerce, artificial-intelligence]
 **Fraud Detection and Security for Trust:** Building trust is crucial for small businesses in emerging markets. AI plays a vital role in securing online transactions, detecting and preventing fraud, ensuring that customers feel confident when making purchases from smaller e-commerce players.
 
 **Conclusion:** As small businesses in emerging markets learn to navigate the digital world, using e-commerce and AI together is like having a superpower. These technologies don't just make things fair for small businesses; they also create new paths for success. Small businesses can now stand out and succeed in the big, competitive market.
+
+**Contact US :** [https://www.wisenetic.com/contact](https://www.wisenetic.com/contact)
