fix: social media card

--- a/blog/2023-11-21-empowering-small-businesses/index.mdx
+++ b/blog/2023-11-21-empowering-small-businesses/index.mdx
@@ -3,6 +3,7 @@ slug: small-businesses-ecommerce-ai
 title: 'Empowering Small Businesses: E-Commerce and AI in Emerging Markets'
 authors: [gaurav]
 tags: [technology, digital-transformation, e-commerce, artificial-intelligence]
+image: ./e-com.png
 ---
 
 ![e-commerce image](./e-com.png)
